Complete 01 - exercise and extra credit

--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -2,7 +2,10 @@
 
 ## 📝 Your Notes
 
-Elaborate on your learnings here in `src/exercise/01.md`
+### Learnings
+
+I didn't find anything in this lesson super insightful as it was fairly basic
+`useState` usage.
 
 ## Background
 
