--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -4,6 +4,14 @@
 
 Elaborate on your learnings here in `src/exercise/02.md`
 
+### Learnings
+
+This lesson was quite useful in providing some helpful reminders. In particular
+lazy state initialization is something I rarely think about, but was a fun piece
+to play around with by setting console.logs and cemented the idea. I peeked a
+bit at the 4th extra credit for the flexible localStorage hook to consider some
+of the edge cases which the video cleared up.
+
 ## Background
 
 `React.useEffect` is a built-in hook that allows you to run some custom code
