Complete 03 - exercise and extra credit

--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -4,6 +4,12 @@
 
 Elaborate on your learnings here in `src/exercise/03.md`
 
+### Learnings
+
+My favorite part of this lesson was the extra credit and the reminder to
+colocate state. Kent raised a good point in how that is often forgotten during a
+refactor and is a quick and easy performance gain.
+
 ## Background
 
 A common question from React beginners is how to share state between two sibling
