06 - complete lesson plus extra credit and learnings

--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -4,6 +4,14 @@
 
 Elaborate on your learnings here in `src/exercise/06.md`
 
+### Learnings
+
+I enjoyed this lesson quite a bit, specifically the portions where we refactored
+the component to use a status and then continued to refactor that to store the
+entire state in an object. The ErrorBoundary bits were also great and it was fun
+to see the use of the key trick passed to the ErrorBoundary to re-render that
+portion of the tree.
+
 ## Background
 
 HTTP requests are another common side-effect that we need to do in applications.
